--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,15 @@
   "background": {
     "service_worker": "background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["https://*.realestate.com.au/*"],
+      "js": ["content-script.js"]
+    }
+  ],
+  "host_permissions": ["https://*.realestate.com.au/*"],
   "permissions": ["declarativeContent", "activeTab", "scripting"],
-  "page_action": {
+  "action": {
     "default_icon": {
       "16": "/images/home_16.png",
       "32": "/images/home_32.png",
